--- a/TempExample.tex
+++ b/TempExample.tex
@@ -165,7 +165,8 @@ U/V & I/mA & v/km·h$^{-1}$ & x/mm & p/MPa \\ \hline
 \item 硬度符号. 
 \item 不表示量的外文缩写字. 
 \item 表示序号的拉丁字母. 
-\item 量符号中为区别其他量而加的具有特定含义的非量符号下角标. 
+\item 量符号中为区别其他量而加的具有特定含义的非量符号下角标.
+\item 缩写$\ii\ \jj\ \ee$ 
 \end{enumerate} 
 
 \subsection{引用代码示例}
