example on citation of the section
example on citation of the section

--- a/TempExample.tex
+++ b/TempExample.tex
@@ -173,6 +173,8 @@ U/V & I/mA & v/km·h$^{-1}$ & x/mm & p/MPa \\ \hline
 
 \lstinputlisting[language=C++]{code/code1.cpp}
 
+大段代码可以放在附录\ref{app1}, 引用章节名\nameref{app1}.
+
 \section{结~~论}
 用准确、精炼的语言归纳总结使用的方法以及研究结果. 
 
@@ -212,7 +214,7 @@ U/V & I/mA & v/km·h$^{-1}$ & x/mm & p/MPa \\ \hline
 
 \section*{附录}
 
-\subsection*{Appendix 1}
+\subsection*{Appendix 1}\label{app1}
 
 大段的代码放这里.
 
