equation labeled within section

--- a/TempExample.tex
+++ b/TempExample.tex
@@ -73,7 +73,7 @@
 
 式中, $u$是×××× (单位); $v$是××× (单位); $w$是×× (单位). 
 
-对于公式, 应全文统一连续编号, 如式\eqref{EQ1}……一般情况下, 需要引用的或重要的公式才编号. 在文中引用时, 用“式 (编号)”表示. 
+我用的公式较多, 所以按section编号, 如式\eqref{EQ1}……一般情况下, 需要引用的或重要的公式才编号. 在文中引用时, 用“式 (编号)”表示. 
 后文不再提及的, 可以不编号. 如
 \begin{equation*}
 1 + 1 + 3 = 5
